[package]
name = "mpl-fixed-price-sale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "mpl_fixed_price_sale"

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {path = "../../../anchor/lang", features=["init-if-needed"]}
anchor-spl = {path = "../../../anchor/spl"}
safe-token = path = "../../../safecoin-program-lib/libraries/safe-token/program"}
mpl-token-metadata = { features = [ "no-entrypoint" ], path="../../token-metadata/program"}

[dev-dependencies]
anchor-client = {path = "../../../anchor/client"}
safecoin-program-test = "~1.8.12"
safecoin-program = "~1.8.12"
safecoin-sdk = "~1.9.5"
safe-associated-token-account = {path = "../../../safecoin-program-lib/libraries/safe-associated-token-account/program"}
