[package]
name = "mpl-token-metadata"
version = "1.2.7"
description = "Metaplex Metadata"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex-program-library"
license = "AGPL-3.0"
edition = "2021"
readme = "README.md"


[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "~0.3"
arrayref = "~0.3.6"
num-traits = "~0.2"
safecoin-program = "~1.8.12"
mpl-token-vault = { version = "~0.1.0", features = [ "no-entrypoint" ] }
safe-token = { version="~3.2.2", features = [ "no-entrypoint" ] }
safe-associated-token-account = { version = "~1.0.10", features = ["no-entrypoint"] }
thiserror = "~1.0"
borsh = "~0.9.2"
shank = { version = "~0.0.1" }

[dev-dependencies]
safecoin-sdk = "~1.8.12"
safecoin-program-test = "~1.8.12"

[lib]
crate-type = ["cdylib", "lib"]
